back to main page added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<p style="text-align: right;">
+  <a href="https://joncancode.github.io/home/" rel="noopener noreferrer"><span style="font-family: Tahoma, Geneva, sans-serif;">Back to Main Page</span></a>
+</p>
 <p style="text-align: center;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 36px;">Case Study Coming Soon...</span></p>
 <p style="text-align: center;">
   <br>
