--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
 <p style="text-align: center;">
   <br>
 </p>
+
+<a  href="
+http://rebrand.ly/meetup_case_study
+" target="_new"> 
+          Link to Meetup Case Study
+</a>
+<br>
+<a  href="http://rebrand.ly/bronx_case_study/" >
+  Link to Bronx.Tech Case Study
+          </a>
+          
